--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
+    "react-parallax": "^3.5.1",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.12.0",
     "sort-by": "^1.2.0",
     "swiper": "^9.3.2"
