--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-parallax": "^3.5.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.12.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.11",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
