--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-parallax": "^3.5.1",
+    "react-query": "^3.39.3",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.12.0",
     "sort-by": "^1.2.0",
